PLAT-1069 | Fix label sizes on mobile and checkboxes

--- a/resources/assets/sass/checkout/molecules/_payment-option.scss
+++ b/resources/assets/sass/checkout/molecules/_payment-option.scss
@@ -13,8 +13,11 @@
 
   &__info {
     color: $storm-gray;
-    font-size: $font-size-minus-1;
-    line-height: $line-height-minus-1;
+
+    @media #{$breakpoint-s} {
+      font-size: $font-size-minus-1;
+      line-height: $line-height-minus-1;
+    }
   }
 
   &.-active {
