--- a/resources/assets/sass/styleguide/molecules/_forms.scss
+++ b/resources/assets/sass/styleguide/molecules/_forms.scss
@@ -31,6 +31,8 @@
     align-items: center;
 
     .a-label {
+      font-size: $font-size-base;
+      line-height: $line-height-base;
       margin-bottom: 0;
     }
   }
